# scanner

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test.yml
app/: agents.py  db.py  jobs.py  ocr.py  pdf.py
app/routes/: document.py  pages.py
cli/: .env.example  main.py
server/: .env.example  main.py
server/app/: agents.py  config.py  db.py  image.py  jobs.py  pipeline.py  storage.py
server/app/routes/: api.py  document.py  pages.py  upload.py
server/templates/partials/: doc_detail.html  doc_edit_result.html  file_list.html
static/: style.css
templates/: index.html
templates/partials/: _doc_card.html  doc_detail.html  file_list.html  upload_result.html
tests/: test_agents.py  test_db.py  test_image.py  test_ocr.py  test_pdf.py  test_pipeline.py  test_storage.py
