[project]
name = "scanme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.0",
    "pydantic-ai>=1.65.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.25.0",
    "python-multipart>=0.0.20",
    "rich>=14.3.3",
    "uvicorn>=0.41.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "pytesseract>=0.3.13",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
